kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      nodeSelector:
        kubernetes.io/hostname: basalt
      containers:
        - name: kavita
          image: linuxserver/kavita:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: kavita-config
              mountPath: /config
            - name: remote-media
              mountPath: /remote-media
              readOnly: true
      volumes:
        - name: kavita-config
          persistentVolumeClaim:
            claimName: kavita-config
        - name: remote-media
          nfs:
            server: 192.168.1.126
            path: /mnt/user/Media
