kavita/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-dns"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - kavita.ozeliurs.com
      secretName: kavita-tls
  rules:
    - host: kavita.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kavita
                port:
                  number: 5000
